syntax = "proto3";
package tendermint.proto.consensus;

option go_package = "github.com/tendermint/tendermint/proto/consensus";

import "third_party/proto/gogoproto/gogo.proto";
import "proto/consensus/msgs.proto";
import "proto/types/events.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";

message MsgInfo {
  Message msg     = 1 [(gogoproto.nullable) = false];
  string  peer_id = 2 [(gogoproto.customname) = "PeerID"];
}

message TimeoutInfo {
  google.protobuf.Duration duration = 1
      [(gogoproto.nullable) = false, (gogoproto.stdduration) = true];
  int64 height = 2;
  int32 round  = 3;
  uint32 step   = 4;
}

message EndHeight {
  int64 height = 1;
}

message WALMessage {
  oneof sum {
    tendermint.proto.types.EventDataRoundState event_data_round_state = 1;
    MsgInfo                                    msg_info               = 2;
    TimeoutInfo                                timeout_info           = 3;
    EndHeight                                  end_height             = 4;
  }
}

// TimedWALMessage wraps WALMessage and adds Time for debugging purposes.
message TimedWALMessage {
  google.protobuf.Timestamp time = 1 [(gogoproto.nullable) = false, (gogoproto.stdtime) = true];
  WALMessage                Msg  = 2;
}
